# bitboards

./: Board.cpp  Board.h  CMakeLists.txt  MoveGeneration.cpp  MoveGeneration.h  README.md  Tests.cpp  Tests.h  main.cpp  utils.cpp  utils.h
